# rober

./: .gitignore  .gitmodules  Cargo.toml
.claude/: settings.local.json
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs
apps/messenger-server/: Cargo.toml
apps/messenger-server/src/: channeltalk.rs  config.rs  filter.rs  main.rs  webhook.rs  ws.rs
apps/rover-probe/: Cargo.toml
apps/rover-probe/src/: lib.rs  local_compat.rs  main.rs
benchmarks/fixtures/browser/: benchmark-form.html
configs/gateway/: config.toml
configs/messenger/: config.toml
configs/zeroclaw/: README.md  base-config.example.toml  config.toml  profile.default.example.toml
crates/channel/: Cargo.toml
crates/channel/src/: channeltalk.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/messenger/: Cargo.toml
crates/messenger/src/: adapter.rs  connection.rs  lib.rs  protocol.rs
crates/windows_native/: Cargo.toml
crates/windows_native/src/: lib.rs
crates/zeroclaw_bridge/: Cargo.toml
crates/zeroclaw_bridge/src/: lib.rs
docs/: core-flow.md  initial-architecture.md  windows-control-layer-feasibility.md
scripts/: README.md  benchmark-common.ps1  bootstrap.ps1  bootstrap.sh  gateway.ps1  gateway.sh  run-benchmark.ps1  run-stress-benchmark.ps1
zeroclaw/src/channels/: channeltalk.rs  mod.rs
zeroclaw/src/config/: mod.rs  schema.rs
zeroclaw/src/gateway/: mod.rs
