[workspace]
members = [
    "apps/rover-probe",
    "apps/gateway",
    "crates/core",
    "crates/zeroclaw_bridge",
    "crates/windows_native",
    "crates/channel",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"

