[package]
name = "rover-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rover-channel = { path = "../../crates/channel" }
serde = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
