[package]
name = "messenger-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rover-messenger = { path = "../../crates/messenger" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
