[package]
name = "rover-channel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
