[package]
name = "rover-messenger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rover-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
tracing = "0.1"
